
- Fixed handling of failure to change directory at startup.

- Blocked access to files outside of the spool in bcron-spool.

- Added debug messages to bcron-exec.

- Fixed a bug in bcron-spool that caused listing missing crontabs to
  silently succeed.

- Added support for dumping the current job schedule in bcron-sched.

- Added configuration file for hard-coded sendmail command line.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.09

- Fixed several build and portability issues.

- The default path for bcron-spool is changed to /var/run/bcron-spool

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.08

- Reordered some things in bcron-exec to provide error emails more often
  when jobs fail to run because of system errors.

- bcron-update internally strips slashes from paths to prevent problems
  with doubled or trailing slashes in arguments.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.07

- Added logging of warnings when crontabs fail to be parsed properly.

- Added sending email notification if a job was killed.

- Fixed crash in parsing of faulty timespecs.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.06

- Added support for listing all system crontabs.

- bcron-exec now waits until all the programs its running have exited so
  that email gets sent properly.
